deleted z-index (TO FIX: img position)

--- a/src/style/footerMain.scss
+++ b/src/style/footerMain.scss
@@ -3,7 +3,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    z-index: -1;
 
     .container {
 
@@ -47,7 +46,6 @@
                     position: absolute;
                     top: -90px;
                     right: 0;
-                    z-index: 0;
                 }
             }
         }
